--- a/.github/workflows/ci_reuse_go.yml
+++ b/.github/workflows/ci_reuse_go.yml
@@ -30,9 +30,26 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
 
+    - name: CI
+      uses: untillpro/ci-action@master
+      with:
+        organization: 'untillpro, heeus'
+        token: ${{ secrets.reporeading_token }}
+        codecov-token: ${{ secrets.codecov_token }}
+
     - name: Rebuild airs-bp3
       run: curl -s https://raw.githubusercontent.com/untillpro/ci-action/master/scripts/rebuild-test-bp3.sh | bash
       env: 
         github_token: ${{ secrets.reporeading_token }}
         gh_event: ${{ github.event_name }}
+
+    - name: Push changes to pb3
+      if: github.event_name == 'push'
+      uses: actions-js/push@master
+      with:
+        directory: airs-bp3
+        repository: untillpro/airs-bp3
+        message: "Update repo airs-bp3"
+        branch: "main"
+        github_token: ${{ secrets.personal_token }}
 
