--- a/.github/workflows/ci_reuse_go.yml
+++ b/.github/workflows/ci_reuse_go.yml
@@ -47,7 +47,7 @@ jobs:
       if: github.event_name == 'push'
       uses: actions-js/push@master
       with:
-        directory: ../core-istructsmem/airs-bp3
+        directory: ../../core-istructsmem/airs-bp3
         repository: untillpro/airs-bp3
         message: "Update repo airs-bp3"
         branch: "main"
