--- a/.github/workflows/ci_reuse_go.yml
+++ b/.github/workflows/ci_reuse_go.yml
@@ -42,12 +42,13 @@ jobs:
       env: 
         github_token: ${{ secrets.reporeading_token }}
         gh_event: ${{ github.event_name }}
+        gh_repo: ${{ GITHUB_REPOSITORY }}
 
     - name: Push changes to pb3
       if: github.event_name == 'push'
       uses: actions-js/push@master
       with:
-        directory: ../../core-istructsmem/airs-bp3
+        directory: ../../${{ GITHUB_REPOSITORY }}/airs-bp3
         repository: untillpro/airs-bp3
         message: "Update repo airs-bp3"
         branch: "main"
