--- a/.github/workflows/ci_reuse_go.yml
+++ b/.github/workflows/ci_reuse_go.yml
@@ -43,13 +43,13 @@ jobs:
         echo "GITHUB_REPOSITORY: ${{ GITHUB_REPOSITORY }}"
       env: 
         github_token: ${{ secrets.reporeading_token }}
-        gh_event: ${{ github.event_name }}
+        gh_event: ${{ github.repository##*/ }}
 
     - name: Push changes to pb3
       if: github.event_name == 'push'
       uses: actions-js/push@master
       with:
-        directory: ../../${{ GITHUB_REPOSITORY }}/airs-bp3
+        directory: ../../${{ github.repository##*/ }}/airs-bp3
         repository: untillpro/airs-bp3
         message: "Update repo airs-bp3"
         branch: "main"
