--- a/.github/workflows/ci_reuse_go.yml
+++ b/.github/workflows/ci_reuse_go.yml
@@ -38,11 +38,10 @@ jobs:
         codecov-token: ${{ secrets.codecov_token }}
 
     - name: Rebuild airs-bp3
-      run: |
-        curl -s https://raw.githubusercontent.com/ivvist/ci-act/main/scripts/rebuild-test-bp3.sh | bash
-        echo "GITHUB_REPOSITORY: ${{ GITHUB_REPOSITORY }}"
+      run: curl -s https://raw.githubusercontent.com/ivvist/ci-act/main/scripts/rebuild-test-bp3.sh | bash
       env: 
         github_token: ${{ secrets.reporeading_token }}
+        gh_event: ${{ github.event_name }}
 
     - name: Push changes to pb3
       if: github.event_name == 'push'
